<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_WriteContext" Id="{3a204d30-471d-4d5f-8048-0a231ff169f1}">
    <Declaration><![CDATA[// An opaque struct that represents the current serialization state and is passed along as the serialization proceeds.
TYPE ST_WriteContext :
STRUCT
    stBuffer    	: ST_Span;
    stState     	: ST_WriterInternalState;
	pCurrentContext : POINTER TO FB_WriteContext;	// The current context we are operating on
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>